@startuml
abstract class Shape{
    # color:String
    # filled:boolean
    + Shape()
    + Shape(color:String, filled: boolean)
    + getColor():String
    + setColor(color: String):void
    + isFilled():boolean
    + setFilled(filled: boolean):void
    + toString():String
    + **getArea():double**
    + **getPerimeter():double**
}
class Circle{
    # radius:double
    + Circle()
    + Circle(radius:double)
    + Circle(radius:double, color: String, filled: boolean)
    + getRadius():double
    + setRadius(radius:double): void
    + **getArea():double**
    + **getPerimeter():double**
}
class Rectangle{
    # width:double
    # length:double
    + Rectangle()
    + Rectangle(width:double, length:double)
    + Rectangle(width:double, length:double, color: String, filled: boolean)
    + getWidth():double
    + setWidth(width:double):void
    + getLength():double
    + setLength(length:double):void
    + **getArea():double**
    + **getPerimeter():double**
}
class Square{
    + Square()
    + Square(side:double)
    + Square(side:double, color: String, filled: boolean)
    + getSide():double
    + setSide(side:double):void
    + **getArea():double**
    + **getPerimeter():double**
}
Circle --|> Shape: extends
Rectangle --|> Shape: extends
Square --|> Rectangle: extends
note left of Shape::getArea
 **MÉTODO ABSTRACTO**
 **IMPLEMENTADO EN CADA SUBCLASE**
 end note

 note left of Shape::getPerimeter
 **MÉTODO ABSTRACTO**
 **IMPLEMENTADO EN CADA SUBCLASE**
 end note

 note left of Circle::getArea
 **PI * radio²**
 end note

 note left of Circle::getPerimeter
 **2 * PI * radio**
 end note

 note left of Rectangle::getArea
 **ancho * largo**
 end note

 note left of Rectangle::getPerimeter
 **2 * (ancho + largo)**
 end note

 note left of Square::setSide
 **ACTUALIZA ANCHO Y LARGO A LA VEZ**
 end note
@enduml
